syntax = "proto3";

package token;
option go_package = "github.com/infraboard/keyauth/pkg/token";

import "pkg/user/pb/types.proto";

enum GrantType {
    NULL = 0;
    UNKNOWN = 1;
    PASSWORD = 2;
    LDAP = 3;
    REFRESH = 4;
    ACCESS = 5;
    CLIENT = 6;
    AUTH_CODE = 7;
    IMPLICIT = 8;
}

enum TokenType {
    BEARER = 0;
    MAC = 1;
    JWT = 2;
}

enum BlockType {
    SESSION_TERMINATED = 0;
    OTHER_CLIENT_LOGGED_IN = 1;
    OTHER_PLACE_LOGGED_IN = 2;
    OTHER_IP_LOGGED_IN = 3;
}

message Token {
    string session_id = 2;
    string access_token = 3;
    string refresh_token = 4;
    int64 create_at = 5;
    int64 access_expired_at = 6;
    int64 refresh_expired_at = 7;
    string domain = 8;
    user.UserType user_type = 9;
    string account = 10;
    string application_id = 11;
    string application_name = 12;
    string client_id = 13;
    GrantType start_grant_type = 14;
    GrantType grant_type = 15;
    TokenType type = 16;
    string scope = 17;
    string description = 18;
    bool is_block = 19;
    BlockType block_type = 20;
    int64 block_at = 21;
    string block_reason = 22;
    string remote_ip = 23;
    string user_agent = 24;
}

message Set {
    int64 total = 1;
    repeated Token items = 2;
}